--- a/styleTransfer.ipynb
+++ b/styleTransfer.ipynb
@@ -6,7 +6,7 @@
       "name": "styleTransfer.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyO/7FZeVuRUKmizmcg6gd5U",
+      "authorship_tag": "ABX9TyMvlXaN4Xf9161FodJBqJgo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Convert Tensor to Image**"
+        "# **Convert Tensor to Image**"
       ]
     },
     {
@@ -118,7 +118,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Select the image and the style**"
+        "# **Select the image and the style**"
       ]
     },
     {
@@ -144,7 +144,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Convert the Image**"
+        "# **Convert the Image**"
       ]
     },
     {
@@ -181,7 +181,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Plot the Image and the Style**"
+        "# **Plot the Image and the Style**"
       ]
     },
     {
@@ -210,7 +210,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Plot the Image and the Style**"
+        "# **Plot the Image and the Style**"
       ]
     },
     {
@@ -240,7 +240,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Use hub.load**"
+        "# **Use TF-hub.load**"
       ]
     },
     {
@@ -260,6 +260,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DN4H_bQC04NW",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Download the Trained Weights for VGG19**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "wVG39lfajGUU",
@@ -277,6 +287,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ct2-eFkC1BKQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Use VGG19 to Predict the Dog Breed**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "OR3H1aTRjI__",
@@ -289,6 +309,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x0g_Syv41INN",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Load the Model without the Classification Head**"
+      ]
     },
     {
       "cell_type": "code",
@@ -306,6 +336,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qtl72lRv3gtU",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Choose layers to Represent the Style and Content**"
+      ]
     },
     {
       "cell_type": "code",
@@ -332,6 +372,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AKyZqseK3teA",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Build the Model**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8of8GazgjRMz",
@@ -352,6 +402,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HtfwGSMz3yky",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Create the Model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -377,6 +437,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LAFiAxs936fQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Calculate Style**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vQdEWNmIjWl4",
@@ -392,6 +462,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qC9MhgzN3-Ev",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Extract Style and Content**"
+      ]
     },
     {
       "cell_type": "code",
@@ -467,6 +547,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xYCDdeeX4JYf",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Run Gradient Descent**"
+      ]
     },
     {
       "cell_type": "code",
@@ -561,6 +651,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zSNbNKLP4UWF",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Update the Image**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "_j6chbTIjwuc",
@@ -582,6 +682,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "arKoDIsi4ZG5",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Run some steps to check the test**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "m2ppNNo6jy8o",
@@ -596,6 +706,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z4X6vNBe4e4i",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Do the full Optimization**"
+      ]
     },
     {
       "cell_type": "code",
@@ -626,6 +746,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jhhxvZGW4ljS",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Total Variation of Loss**"
+      ]
     },
     {
       "cell_type": "code",
@@ -733,6 +863,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sWJSqNvE4uYY",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Re-run the Optimization**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ifCnnkRokZxf",
@@ -809,6 +949,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NNU1RbUt402T",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Save the Result**"
+      ]
     },
     {
       "cell_type": "code",
