--- a/styleTransfer_1.ipynb
+++ b/styleTransfer_1.ipynb
@@ -6,7 +6,7 @@
       "name": "styleTransfer 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOQ9k4/eZk42VPrYyYTOBou",
+      "authorship_tag": "ABX9TyPnaL7CgKs4qilcNgFjVqYA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,42 +71,30 @@
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib as mpl\n",
+        "#Customize the plots\n",
         "mpl.rcParams['figure.figsize'] = (12,12)\n",
-        "mpl.rcParams['axes.grid'] = False\n",
-        "\n",
-        "import numpy as np\n",
-        "import PIL.Image\n",
-        "import time\n",
-        "import functools"
+        "#Don't show the grid lines\n",
+        "mpl.rcParams['axes.grid'] = False"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2SgRA-u_n7pF",
-        "colab_type": "text"
-      },
-      "source": [
-        "# **Convert Tensor to Image**"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "Sl9E-LCaiwt5",
+        "id": "Y9imBgH1fQI1",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def tensor_to_image(tensor):\n",
-        "  tensor = tensor*255\n",
-        "  tensor = np.array(tensor, dtype=np.uint8)\n",
-        "  if np.ndim(tensor)>3:\n",
-        "    assert tensor.shape[0] == 1\n",
-        "    tensor = tensor[0]\n",
-        "  return PIL.Image.fromarray(tensor)"
+        "import numpy as np\n",
+        "import PIL.Image\n",
+        "import time\n",
+        "\n",
+        "#The functools module provides tools for working with functions and other \n",
+        "#callable objects, to adapt or extend them for new purposes without \n",
+        "#completely rewriting them.\n",
+        "import functools"
       ],
       "execution_count": 0,
       "outputs": []
@@ -129,10 +117,12 @@
         "colab": {}
       },
       "source": [
-        "content_path = tf.keras.utils.get_file('YellowLabradorLooking_new.jpg', 'https://storage.googleapis.com/download.tensorflow.org/example_images/YellowLabradorLooking_new.jpg')\n",
+        "content_path = tf.keras.utils.get_file('YellowLabradorLooking_new.jpg', \n",
+        "                                       'https://storage.googleapis.com/download.tensorflow.org/example_images/YellowLabradorLooking_new.jpg')\n",
         "\n",
         "# https://commons.wikimedia.org/wiki/File:Vassily_Kandinsky,_1913_-_Composition_7.jpg\n",
-        "style_path = tf.keras.utils.get_file('kandinsky5.jpg','https://storage.googleapis.com/download.tensorflow.org/example_images/Vassily_Kandinsky%2C_1913_-_Composition_7.jpg')"
+        "style_path = tf.keras.utils.get_file('kandinsky5.jpg',\n",
+        "                                     'https://storage.googleapis.com/download.tensorflow.org/example_images/Vassily_Kandinsky%2C_1913_-_Composition_7.jpg')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -156,11 +146,22 @@
       },
       "source": [
         "def load_img(path_to_img):\n",
+        "  #Max dim of the image\n",
         "  max_dim = 512\n",
         "  img = tf.io.read_file(path_to_img)\n",
+        "  \n",
+        "  #Detects whether an image is a BMP, GIF, JPEG, or PNG, and performs the \n",
+        "  #appropriate operation to convert the input bytes string into a Tensor of type dtype\n",
         "  img = tf.image.decode_image(img, channels=3)\n",
+        "\n",
+        "  #Images that are represented using floating point values are expected to \n",
+        "  #have values in the range [0,1). Image data stored in integer data types are \n",
+        "  #expected to have values in the range [0,MAX], where MAX is the largest \n",
+        "  #positive representable number for the data type.\n",
+        "  #This op converts between data types, scaling the values appropriately before casting.\n",
         "  img = tf.image.convert_image_dtype(img, tf.float32)\n",
         "\n",
+        "  #Casts a tensor to a new type\n",
         "  shape = tf.cast(tf.shape(img)[:-1], tf.float32)\n",
         "  long_dim = max(shape)\n",
         "  scale = max_dim / long_dim\n",
@@ -194,6 +195,7 @@
       "source": [
         "def imshow(image, title=None):\n",
         "  if len(image.shape) > 3:\n",
+        "    #tf.squeeze = Removes dimensions of size 1 from the shape of a tensor.\n",
         "    image = tf.squeeze(image, axis=0)\n",
         "\n",
         "  plt.imshow(image)\n",
