--- a/styleTransfer_1.ipynb
+++ b/styleTransfer_1.ipynb
@@ -6,7 +6,7 @@
       "name": "styleTransfer 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPnaL7CgKs4qilcNgFjVqYA",
+      "authorship_tag": "ABX9TyP0cJipwyZUjxffGqrc+6YE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,6 +95,35 @@
         "#callable objects, to adapt or extend them for new purposes without \n",
         "#completely rewriting them.\n",
         "import functools"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P6Y_wA2bj4oZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Convert Tensor to Image**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fKVZA_orjv4v",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def tensor_to_image(tensor):\n",
+        "  tensor = tensor*255\n",
+        "  tensor = np.array(tensor, dtype=np.uint8)\n",
+        "  if np.ndim(tensor)>3:\n",
+        "    assert tensor.shape[0] == 1\n",
+        "    tensor = tensor[0]\n",
+        "  return PIL.Image.fromarray(tensor)"
       ],
       "execution_count": 0,
       "outputs": []
