--- a/TextClassification.ipynb
+++ b/TextClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TextClassification.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMTuHEBmTsTR3MrXtsgMzt6",
+      "authorship_tag": "ABX9TyMhbtT25xDecnIDLpvlfb3T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,6 +154,21 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1OQDXajCSgoL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Build the full model<br>\n",
+        "The layers are stacked sequentially to build the classifier:\n",
+        "\n",
+        "The first layer is a TensorFlow Hub layer. This layer uses a pre-trained Saved Model to map a sentence into its embedding vector. The pre-trained text embedding model that we are using (google/tf2-preview/gnews-swivel-20dim/1) splits the sentence into tokens, embeds each token and then combines the embedding. The resulting dimensions are: (num_examples, embedding_dimension).\n",
+        "This fixed-length output vector is piped through a fully-connected (Dense) layer with 16 hidden units.\n",
+        "The last layer is densely connected with a single output node. Using the sigmoid activation function, this value is a float between 0 and 1, representing a probability, or confidence level."
+      ]
     },
     {
       "cell_type": "code",
