--- a/TextClassification.ipynb
+++ b/TextClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TextClassification.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMhbtT25xDecnIDLpvlfb3T",
+      "authorship_tag": "ABX9TyNlndTq0T0D54C69ihvMht1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,6 +234,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t_FZ78NQTDcJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "This fairly naive approach achieves an accuracy of about 87%. With more advanced approaches, the model should get closer to 95%."
+      ]
     }
   ]
 }
