--- a/Cars.ipynb
+++ b/Cars.ipynb
@@ -35,7 +35,7 @@
       },
       "source": [
         "# Clone the entire repo.\n",
-        "!git clone -l -s https://github.com/cagBRT/Intro-to-ML-Programming.git cloned-repo\n",
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
         "%cd cloned-repo\n",
         "!ls"
       ],
@@ -541,6 +541,8 @@
         "colab": {}
       },
       "source": [
+        "from keras import metrics\n",
+        "\n",
         "inputs = len(train_dataset.keys())\n",
         "print(\"number of inputs to the model = \" + str(inputs))\n",
         "\n",
@@ -553,7 +555,7 @@
         "\n",
         "  optimizer = tf.keras.optimizers.RMSprop(0.001)\n",
         "\n",
-        "  model.compile(loss='mean_squared_error',\n",
+        "  model.compile(loss='mean_squared_error', \n",
         "                optimizer=optimizer,\n",
         "                metrics=['mean_absolute_error', 'mean_squared_error'])\n",
         "  return model\n",
@@ -652,60 +654,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "V09cmOaQxOgk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "hist = pd.DataFrame(history.history)\n",
-        "hist['epoch'] = history.epoch\n",
-        "hist.tail()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gTpQFifuhsSJ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def plot_history(history):\n",
-        "  hist = pd.DataFrame(history.history)\n",
-        "  hist['epoch'] = history.epoch\n",
-        "\n",
-        "  plt.figure()\n",
-        "  plt.xlabel('Epoch')\n",
-        "  plt.ylabel('Mean Abs Error [MPG]')\n",
-        "  plt.plot(hist['epoch'], hist['mean_absolute_error'],\n",
-        "           label='Train Error')\n",
-        "  plt.plot(hist['epoch'], hist['val_mean_absolute_error'],\n",
-        "           label = 'Val Error')\n",
-        "  plt.ylim([0,5])\n",
-        "  plt.legend()\n",
-        "\n",
-        "  plt.figure()\n",
-        "  plt.xlabel('Epoch')\n",
-        "  plt.ylabel('Mean Square Error [$MPG^2$]')\n",
-        "  plt.plot(hist['epoch'], hist['mean_squared_error'],\n",
-        "           label='Train Error')\n",
-        "  plt.plot(hist['epoch'], hist['val_mean_squared_error'],\n",
-        "           label = 'Val Error')\n",
-        "  plt.ylim([0,20])\n",
-        "  plt.legend()\n",
-        "  plt.show()\n",
-        "\n",
-        "\n",
-        "plot_history(history)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "LK0vc8KtvnXz",
         "colab_type": "code",
         "colab": {}
@@ -732,9 +680,9 @@
         "colab": {}
       },
       "source": [
-        "loss, mae, mse = model.evaluate(normed_test_data, test_labels, verbose=0)\n",
+        "loss, mae, mse = model.evaluate(normed_test_data, test_labels, verbose=1)\n",
         "\n",
-        "print(\"Testing set Mean Abs Error: {:5.2f} MPG\".format(mae))"
+        "print(\"Testing set Mean Abs Error: {:5.2f} MPG\".format(mae))\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -816,6 +764,26 @@
       },
       "source": [
         "print(trial_predictions)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4f91YGdpFwW2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "\n",
+        "lr = LinearRegression()\n",
+        "lr.fit(train_dataset, train_labels)\n",
+        "y_pred = lr.predict(test_dataset)\n",
+        "\n",
+        "print(mean_absolute_error(test_labels, y_pred))"
       ],
       "execution_count": 0,
       "outputs": []
