--- a/WineQuality.ipynb
+++ b/WineQuality.ipynb
@@ -6,7 +6,7 @@
       "name": "WineQuality.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOrbR+Mqj9Wvf+hd4OtRI+p",
+      "authorship_tag": "ABX9TyMOfgODqGUsLDaAs4XTsZkV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -250,7 +250,7 @@
         "colab": {}
       },
       "source": [
-        "wines['type'].value_counts()"
+        "wines['quality'].value_counts()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -488,13 +488,13 @@
         "\n",
         "from keras import metrics\n",
         "\n",
-        "inputs = len(train_dataset.keys())\n",
+        "inputs = len(normed_train_data.keys())\n",
         "print(\"number of inputs to the model = \" + str(inputs))\n",
         "\n",
         "def build_model():\n",
         "  model = keras.Sequential([\n",
-        "    layers.Dense(64, activation=tf.nn.relu,input_shape=([len(train_dataset.keys())]),),\n",
-        "    layers.Dense(64, activation=tf.nn.relu),\n",
+        "    layers.Dense(124, activation=tf.nn.relu,input_shape=([len(normed_train_data.keys())]),),\n",
+        "    layers.Dense(124, activation=tf.nn.relu),\n",
         "    layers.Dense(1)\n",
         "  ])\n",
         "\n",
@@ -598,42 +598,12 @@
       },
       "source": [
         "axes = plt.gca()\n",
-        "axes.set_ylim([0,25])\n",
+        "axes.set_ylim([0,1])\n",
         "plt.plot(hist['loss'], label='training loss')\n",
         "plt.plot(hist['val_loss'], label='testing loss')\n",
         "plt.title('Loss')\n",
         "plt.xlabel('epochs')\n",
         "plt.ylabel('loss')\n",
-        "plt.legend()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NBE3JcTueWTe",
-        "colab_type": "text"
-      },
-      "source": [
-        "The accuracy plot is terrible. Definitely check the complexity of the model. "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WLHCgMby8b9E",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "axes = plt.gca()\n",
-        "axes.set_ylim([0,1])\n",
-        "plt.plot(hist['accuracy'], label='training accuracy')\n",
-        "plt.plot(hist['val_accuracy'], label='testing accuracy')\n",
-        "plt.title('Accuracy')\n",
-        "plt.xlabel('epochs')\n",
-        "plt.ylabel('acc')\n",
         "plt.legend()"
       ],
       "execution_count": 0,
@@ -647,36 +617,9 @@
         "colab": {}
       },
       "source": [
-        "loss, mae, mse,acc = model.evaluate(normed_test_data, test_labels, verbose=0)\n",
+        "loss, mae, mse = model.evaluate(normed_test_data, test_labels, verbose=0)\n",
         "\n",
-        "print(\"Testing set Mean Abs Error: {:5.2f}\".format(mae))\n",
-        "print(\"Accuracy = \", acc)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Y-MuZ7UR0ZfA",
-        "colab_type": "text"
-      },
-      "source": [
-        "# **Confusion Matrix**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "W4nkeO2MlYHz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn.metrics import confusion_matrix\n",
-        "test_l = model.predict_classes(normed_test_data)\n",
-        "#0,0=true neg, 1,0=false neg, 1,1=true pos, 0,1=false pos\n",
-        "confusion_matrix(test_labels, test_l)"
+        "print(\"Testing set Mean Abs Error: {:5.2f}\".format(mae))\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -718,7 +661,7 @@
       },
       "source": [
         "#pop off the type from the dataframe\n",
-        "prediction_labels = predict_case.pop('type')"
+        "prediction_labels = predict_case.pop('quality')"
       ],
       "execution_count": 0,
       "outputs": []
