--- a/dogOrMuffin.ipynb
+++ b/dogOrMuffin.ipynb
@@ -6,7 +6,7 @@
       "name": "imageClass.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNxsyle65b8cxx8Rwm7o135",
+      "authorship_tag": "ABX9TyOFWEJRyQNx7w4kxAJ+5O7l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -512,7 +512,7 @@
         "colab": {}
       },
       "source": [
-        "baseline_model.compile(optimizer='adam',\n",
+        "smaller_model.compile(optimizer='adam',\n",
         "\tloss='sparse_categorical_crossentropy',\n",
         "\tmetrics=['accuracy','sparse_categorical_crossentropy'])"
       ],
