--- a/dogOrMuffin.ipynb
+++ b/dogOrMuffin.ipynb
@@ -6,7 +6,7 @@
       "name": "imageClass.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOFWEJRyQNx7w4kxAJ+5O7l",
+      "authorship_tag": "ABX9TyPlS0oU9mAAf8Qlr6GIqyVe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -192,8 +192,7 @@
         "colab": {}
       },
       "source": [
-        "train_images.shape\n",
-        "(26, 100, 100)"
+        "train_images.shape"
       ],
       "execution_count": 0,
       "outputs": []
@@ -220,7 +219,6 @@
       },
       "source": [
         "test_images.shape\n",
-        "(14, 100, 100)\n",
         "print(test_labels)"
       ],
       "execution_count": 0,
