--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMZqNspN+i7fo2MLRTWnqAm",
+      "authorship_tag": "ABX9TyOR5NtjJ/nwUMmGicYxP2PB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +55,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ShS2QjXqFT2N",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Explain better**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "zxjXumXhXhFU",
@@ -64,7 +74,7 @@
       "source": [
         "xplot, yplot = X_train.T\n",
         "plt.scatter(xplot,yplot)\n",
-        "plt.scatter(xplot, y_train, color='red', linewidth=2)\n",
+        "#plt.scatter(xplot, y_train, color='red', linewidth=2)\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -116,7 +126,7 @@
         "colab": {}
       },
       "source": [
-        "x_pred = np.array([[3, 5],[10,8]])\n",
+        "x_pred = np.array([[1,2],[10,10]])\n",
         "y_pred = reg.predict(np.array(x_pred))"
       ],
       "execution_count": 0,
