--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOdGTWbF8DrP/HsW+l0zO2h",
+      "authorship_tag": "ABX9TyOUouY6aEnZLZ09/EgEfLcQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,8 +36,6 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.linear_model import LinearRegression\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
         "from sklearn import datasets, linear_model\n",
         "from sklearn.metrics import mean_squared_error, r2_score"
       ],
@@ -132,6 +130,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1t7CaPtFILSs",
+        "colab_type": "text"
+      },
+      "source": [
+        "add labels to plot"
+      ]
     },
     {
       "cell_type": "code",
