--- a/LinearRegression4_WineQuality.ipynb
+++ b/LinearRegression4_WineQuality.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression4:WineQuality.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPlpGHA4XN+Hzsp8Bz4+tB3",
+      "authorship_tag": "ABX9TyMtMehqZg/akvBMewvKMuy2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -547,6 +547,180 @@
         "**Bad assumptions**: We made the assumption that this data has a linear relationship, but that might not be the case. Visualizing the data may help you determine that.<br>\n",
         "**Poor features**: The features we used may not have had a high enough correlation to the values we were trying to predict.<br>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RcGrpIYHVV6Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Assignment** <br>\n",
+        "Select a feature to remove from the model input. It should be one that has zero or close to zero correlation with quality. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u6lU6ts5VtE_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "corr = wines.corr()\n",
+        "sns.heatmap(corr, \n",
+        "            xticklabels=corr.columns.values,\n",
+        "            yticklabels=corr.columns.values)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "73RLqc4LV_QQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "wines.columns"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Df1X0s_bWDUn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "wines.pop('the column you want to remove')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JaS9nXQVV_u7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Consider changing the ratio of the train/test split\n",
+        "#fac .95 - .5\n",
+        "wines_train = wines.sample(frac=.8,random_state=0)\n",
+        "wines_test = wines.drop(wines_train.index)\n",
+        "print(\"done\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mxFZ3wbhWdbW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_labels = wines_train.pop('quality')\n",
+        "test_labels = wines_test.pop('quality')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UNoXn4U4WsAp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def norm(x):\n",
+        "  return (x - train_stats['mean']) / train_stats['std']\n",
+        "\n",
+        "normed_train_data = norm(wines_train)\n",
+        "normed_test_data = norm(wines_test)\n",
+        "print(\"done\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "65JFKNeoWxKq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "regressor = LinearRegression()  \n",
+        "regressor.fit(wines_train, train_labels)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hd9562TmWyL3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "coeff_df = pd.DataFrame(regressor.coef_, wines_train.columns, columns=['Coefficient'])  \n",
+        "coeff_df"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kpl1zqKRW2mj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df1 = pd.DataFrame({'Actual': test_labels, 'Predicted': y_pred})\n",
+        "df1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R_WzyZItW2qq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df1.plot(kind='bar',figsize=(15,8))\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9peTqxzZW_qi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print('Mean Absolute Error:', metrics.mean_absolute_error(test_labels, y_pred))  \n",
+        "print('Mean Squared Error:', metrics.mean_squared_error(test_labels, y_pred))  \n",
+        "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(test_labels, y_pred)))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
