--- a/Cars.ipynb
+++ b/Cars.ipynb
@@ -642,6 +642,45 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lC2qUqN_impr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def plot_history(history):\n",
+        "  hist = pd.DataFrame(history.history)\n",
+        "  hist['epoch'] = history.epoch\n",
+        "\n",
+        "  plt.figure()\n",
+        "  plt.xlabel('Epoch')\n",
+        "  plt.ylabel('Mean Abs Error [MPG]')\n",
+        "  plt.plot(hist['epoch'], hist['mean_absolute_error'],\n",
+        "           label='Train Error')\n",
+        "  plt.plot(hist['epoch'], hist['val_mean_absolute_error'],\n",
+        "           label = 'Val Error')\n",
+        "  plt.ylim([0,5])\n",
+        "  plt.legend()\n",
+        "\n",
+        "  plt.figure()\n",
+        "  plt.xlabel('Epoch')\n",
+        "  plt.ylabel('Mean Square Error [$MPG^2$]')\n",
+        "  plt.plot(hist['epoch'], hist['mean_squared_error'],\n",
+        "           label='Train Error')\n",
+        "  plt.plot(hist['epoch'], hist['val_mean_squared_error'],\n",
+        "           label = 'Val Error')\n",
+        "  plt.ylim([0,20])\n",
+        "  plt.legend()\n",
+        "  plt.show()\n",
+        "\n",
+        "\n",
+        "plot_history(history)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "mbjeiXNqoQlL",
