--- a/Cars.ipynb
+++ b/Cars.ipynb
@@ -826,6 +826,47 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JNJSROOHothN",
+        "colab_type": "text"
+      },
+      "source": [
+        "Add the missing data:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F8OQJCAaopzt",
+        "colab_type": "text"
+      },
+      "source": [
+        "#1971 Ford Pinto\n",
+        "dataset.at[32,\"Horsepower\"] = 100\n",
+        "print(dataset.loc[32])\n",
+        "\n",
+        "#1974 Ford Maverick\n",
+        "dataset.at[126,\"Horsepower\"] = 75\n",
+        "print(dataset.loc[126])\n",
+        "\n",
+        "#1980 Renault Le Car De Luxe\n",
+        "dataset.at[330,\"Horsepower\"] = 50\n",
+        "print(dataset.loc[330])\n",
+        "\n",
+        "#1980 Ford Mustang Cobra\n",
+        "dataset.at[336,\"Horsepower\"] = 88\n",
+        "print(dataset.loc[336])\n",
+        "\n",
+        "#1981 Renault 18i\n",
+        "dataset.at[354,\"Horsepower\"] = 81\n",
+        "print(dataset.loc[354])\n",
+        "#1982 AMC Concord DL\n",
+        "dataset.at[374,\"Horsepower\"] = 82\n",
+        "print(dataset.loc[374])"
+      ]
     }
   ]
 }
