--- a/diabetesML.ipynb
+++ b/diabetesML.ipynb
@@ -6,7 +6,7 @@
       "name": "diabetesML.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNGS8oyc+r+a23TMvDPTasr",
+      "authorship_tag": "ABX9TyMqi/BO0abiHBQspuNuvN3G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -268,7 +268,7 @@
       },
       "source": [
         "#Choose a number for frac 0.2 - 0.95\n",
-        "df_train = dataset.sample(frac=##,random_state=0)\n",
+        "df_train = dataset.sample(frac=0.5,random_state=0)\n",
         "df_test = dataset.drop(df_train.index)\n",
         "print(\"done\")"
       ],
@@ -425,6 +425,8 @@
       "source": [
         "#'mean_squared_error' or 'binary_crossentropy' or 'mean_absolute_error' or \n",
         "#'mean_absolute_percentage_error'\n",
+        "\n",
+        "#SGD = Stochastic gradient descent and momentum optimizer\n",
         "\n",
         "adam = keras.optimizers.Adam(learning_rate=0.001, beta_1=0.9, beta_2=0.999, amsgrad=False)\n",
         "sgd = keras.optimizers.SGD(learning_rate=0.01, momentum=0.0, nesterov=False)\n",
