--- a/LogisticRegression_1.ipynb
+++ b/LogisticRegression_1.ipynb
@@ -6,7 +6,7 @@
       "name": "LogisticRegression 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOVJFIr4NlRHjhi0yP5Yd4v",
+      "authorship_tag": "ABX9TyMgAOoMvrVabUiI0A2RjDiT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -133,7 +133,7 @@
       },
       "source": [
         "kidDataset.Purchased.value_counts()\n",
-        "sns.countplot(x = 'Purchased', data = kidDataset, palette = 'hls')\n",
+        "sns.countplot(x = 'Purchased', data = kidDataset)\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -277,6 +277,20 @@
       },
       "source": [
         "y_pred=logreg.predict(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zPJ9zIfioGA0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pred_df = pd.DataFrame(y_pred, y_test)\n",
+        "pred_df.head(20)"
       ],
       "execution_count": 0,
       "outputs": []
